# telegram-git-bot

./: .gitignore  BUILD  CMakeLists.txt  Dockerfile  WORKSPACE  build.sh  dev_build.sh  hello.cpp  main.cc  prepare.sh  tgbot.cc
scripts/: build.sh
